--- a/version.yml
+++ b/version.yml
@@ -6,11 +6,13 @@
 # GitHub Actions 워크플로우가 이 파일을 읽어 자동으로 버전을 관리
 #
 # 사용법:
-# 1. version: "1.3.16"
-# 2. project_type: 프로젝트 타입 지정
+# 1. version: "1.3.16" - 사용자에게 표시되는 버전 (의미론적 버전)
+# 2. version_code: 1 - Play Store/App Store 빌드 번호 (1부터 자동 증가)
+# 3. project_type: 프로젝트 타입 지정
 #
 # 자동 버전 업데이트:
 # - patch: 자동으로 세 번째 자리 증가 (x.x.x -> x.x.x+1)
+# - version_code: 매 빌드마다 자동으로 1씩 증가
 # - minor/major: 수동으로 직접 수정 필요
 #
 # 프로젝트 타입별 동기화 파일:
@@ -27,6 +29,7 @@
 # ===================================================================
 
 version: "1.3.16"
+version_code: 1  # Play Store VERSION_CODE (자동 증가, 1부터 시작)
 project_type: "flutter" # spring, flutter, react, react-native, react-native-expo, node, basic
 metadata:
   last_updated: "2025-10-08 15:17:54"
