--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,7 +26,7 @@ if (keystorePropertiesFile.exists()) {
 }
 
 def localProperties = new Properties()
-def localPropertiesFile = rootProject.file('local.properties_stable')
+def localPropertiesFile = rootProject.file('local.properties')
 if (localPropertiesFile.exists()) {
     localPropertiesFile.withReader('UTF-8') { reader ->
         localProperties.load(reader)
